Fix bug that prevented explanations of origin labels from being shown
in the Info tab